# flair-test-suite

./: CONTRIBUTING.md  README.md  flair-test-suite.yaml  flair_test_suite.toml  pyproject.toml  setup.py  sqanti_classification_to_summary_stats.py
config/: align_correct_collapse_template.toml  align_correct_slice_collapse_template.toml  align_regionalize_correct_collapse_template.toml  align_regionalize_transcriptome_template.toml  align_slice_correct_collapse_template.toml  align_slice_transcriptome_template.toml  align_transcriptome_template.toml  config_template.toml  config_template2.toml  config_template_v.2.toml  configuration_list_template.tsv  human_wtc11_align.toml  manifest.py  manifest.yaml
config/templates/: align.toml  collapse.toml  combine.toml  combine_manifest_template.tsv  configuration_list_template.tsv  correct.toml  inputs.toml  quantify.toml  quantify_reads_manifest_template.tsv  region_template.tsv  regionalize.toml  transcriptome.toml
docs/: configurations.md  overview.md  simulation_test.md  test_plan.md
scripts/: flair_test_suite.py
src/: __init__.py  cli.py  config_loader.py
src/flair_test_suite/: __init__.py  align.py  build_completion_file.py  (+10 more)
tests/: test_align_plotting.py  test_case_tsv.py  test_cli.py  test_combine_stage.py  test_estimate_read_count.py  test_qc_dummy.py  test_quantify_stage.py  test_reinstate_ted_qc.py  test_sqanti_qc.py  test_stage_registry.py  test_stage_utils_refactors.py  test_ted_missing_peaks.py  test_ted_nonregionalized.py  test_ted_regionalized.py  test_ted_resolve.py  test_transcriptome_browser.py
(+44 files in other folders)
