[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "flair-test-suite"
version         = "0.1.0"
description     = "Config‑driven test & QC harness for FLAIR ≥2.0"
requires-python = ">=3.10"
dependencies    = [
  "pytest>=8",
  "click",
  "pandas",
  "tomli>=2; python_version<'3.11'",
  "tomli-w>=0.4"
]

[project.scripts]
flair-test-suite = "flair_test_suite.cli:main"
