[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "flair-test-suite"
version         = "0.1.0"
description     = "Config‑driven test & QC harness for FLAIR ≥2.0"
requires-python = ">=3.10"
dependencies    = [
  "pytest>=8",
  "click>=8.2.1",
  "pandas>=2.3.1",
  "tomli>=2; python_version<'3.11'",
  "tomli-w>=0.4",
  "matplotlib>=3.10.3",
  "numpy>=2.3.1",
  "pysam>=0.23.3",
  "plotly>=6.2.0",
  "seaborn>=0.13.2",
  "scipy>=1.16.0",
  "pydantic>=2.11.7",
  "orjson>=3.11.0",
  "simplejson>=3.20.1",
  "statsmodels>=0.14.5",
  "colorama>=0.4.6",
  "python-dateutil>=2.9.0.post0",
  "typing-extensions>=4.14.1",
  "packaging>=25.0",
  "intervaltree>=3.1.0",
]

[project.scripts]
flair-test-suite = "flair_test_suite.cli:main"
